feat: build Hankan 1.1.0 daily dashboard
Add date-based records, resilient focus sessions, history, widget, dark/adaptive UI, legacy data migration, tests, and tag-driven release workflow.